[project]
name = "legacy-converters"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "xarray>=2025.11.0",
  "numpy>=2",
  "pyproj",
  "sparse>=0.17",
  "affine",
  "opt-einsum",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["legacy_converters"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "docs",
]
target-version = "py311"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # tidy imports
]
ignore = [
  "E402", # E402: module level import not at top of file
  "E501", # E501: line too long - let black worry about that
  "E731", # E731: do not assign a lambda expression, use a def
]
fixable = ["I", "TID252"]
extend-safe-fixes = [
  "TID252", # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["legacy_converters"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
